--- a/index.html
+++ b/index.html
@@ -3,10 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Du An 1</title>
+    <!-- reset css -->
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <!-- embel fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- styles -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Figma To Web</title>
 </head>
 <body>
-    <h1>Duc Anh</h1>
-    <h1>sửa lần 1</h1>
+    <!-- header -->
+     <header class="header-fixed">
+        <!-- notification -->
+         <div class="notification">
+            <!-- topbar -->
+             <div class="topbar">
+                <ul>
+                    <li>
+                        <p>Black Friday 50% Off! Limited time only:</p>
+                    </li>
+                    <li>
+                        <p>652 days : 05 hour : 09 mins : 52 secs</p>
+                    </li>
+                </ul>
+             </div>
+            <!-- button -->
+             <div class="action">
+                <a href="#!" class="btn-X">X</a>
+             </div>
+         </div>
+        <!-- top links -->
+         <div class="top-links">
+            <!-- a -->
+             <div class="a">
+                <p>+222-1800-2628</p>
+                <p>blueskytechcompany@gmail.com</p>
+             </div>
+            <!-- b -->
+             <div class="b">
+                <p>Sign up for 10% off your first order:</p>
+                <a href="#!">Sign Up</a>
+             </div>
+            <!-- Language -->
+            <div class="language">
+                <a href="#!" class="our-stores">Our Stores</a>
+                <!-- English -->
+                <div class="english">
+                    <p>English</p>
+                    <img src="./assets/img/.png" alt="icon">
+                </div>
+                <!-- United States -->
+                <div class="united-states">
+                    <p>United States</p>
+                    <img src="./assets/img/.png" alt="icon">
+                </div>
+            </div>
+         </div>
+     </header>
 </body>
 </html>
