--- a/index.html
+++ b/index.html
@@ -48,18 +48,72 @@
              </div>
             <!-- Language -->
             <div class="language">
-                <a href="#!" class="our-stores">Our Stores</a>
+                <!-- Our Stores -->
+                 <div class="our-strores">
+                    <a href="#!" class="our-stores">Our Stores</a>
+                 </div>
                 <!-- English -->
                 <div class="english">
-                    <p>English</p>
-                    <img src="./assets/img/.png" alt="icon">
+                    <a href="#!" class="our-stores">English</a>
+                    <img src="./assets/img/.svg" alt="">
                 </div>
                 <!-- United States -->
                 <div class="united-states">
-                    <p>United States</p>
-                    <img src="./assets/img/.png" alt="icon">
+                    <a href="#!" class="our-stores">United States (USD $)</a>
+                    <img src="./assets/img/.svg" alt="">
                 </div>
             </div>
+         </div>
+        <!-- Background -->
+         <div class="background">
+            <!-- Logo -->
+             <div class="logo">
+                <img src="./assets/img/Logo.svg" alt="">
+             </div>
+            <!-- Menu -->
+             <div class="menu">
+                <!-- Home -->
+                 <div class="home">
+                    <a href="#!">Home</a>
+                    <img src="./assets/img/.svg" alt="">
+                 </div>
+                <!-- Shop -->
+                 <div class="shop">
+                    <a href="#!">Shop</a>
+                    <img src="./assets/img/.svg" alt="">
+                 </div>
+                <!-- Products -->
+                 <div class="products">
+                    <a href="#!">products</a>
+                    <img src="./assets/img/.svg" alt="">
+                 </div>
+                <!-- Pages -->
+                 <div class="pages">
+                    <a href="#!">Pages</a>
+                    <img src="./assets/img/.svg" alt="">
+                 </div>
+                <!-- Blog -->
+                 <div class="blog">
+                    <a href="#!">Blog</a>
+                    <img src="./assets/img/.svg" alt="">
+                 </div>
+                <!-- Sale -->
+                 <div class="sale">
+                    <a href="#!">Sale</a>
+                 </div>
+                <!-- Buy Umino -->
+                 <div class="buy-umino">
+                    <a href="#!">Buy Umino</a>
+                 </div>
+             </div>
+            <!-- Icon -->
+             <div class="icon">
+                <img src="./assets/img/Search.svg" alt="Search">
+                <img src="./assets/img/Login.svg" alt="Login">
+                <img src="./assets/img/Recently viewed.svg" alt="Recently viewed">
+                <img src="./assets/img/Wishlist.svg" alt="Wishlist">
+                <img src="./assets/img/Cart.svg" alt="Cart">
+             </div>
          </div>
      </header>
 </body>
