--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- styles -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Js -->
+    <script src="./index.js" defer></script>
     <title>Figma To Web</title>
 </head>
 <body>
-    <!-- header -->
-     <header class="header-fixed">
+    <!-- Header -->
+     <header>
         <!-- notification -->
          <div class="notification">
             <!-- topbar -->
@@ -71,7 +73,7 @@
                 <img src="./assets/img/Logo.svg" alt="">
              </div>
             <!-- Menu -->
-             <div class="menu">
+             <nav class="menu">
                 <!-- Home -->
                  <div class="home">
                     <a href="#!">Home</a>
@@ -103,9 +105,9 @@
                  </div>
                 <!-- Buy Umino -->
                  <div class="buy-umino">
-                    <a href="#!">Buy Umino</a>
+                    <a href="#!">Buy Umino!</a>
                  </div>
-             </div>
+               </nav>
             <!-- Icon -->
              <div class="icon">
                 <img src="./assets/img/Search.svg" alt="Search">
@@ -116,5 +118,21 @@
              </div>
          </div>
      </header>
+    <!-- Main-->
+     <main>
+         <!-- Slider -->
+          <div class="slider">
+            <!-- Img Slider -->
+             <div class="img-slider">
+               <img src="./assets/img/img1.jpg" alt="img1.jpg">
+               <img src="./assets/img/img2.jpg" alt="img2.jpg">
+               <img src="./assets/img/img3.jpg" alt="img3.jpg">
+             </div>
+            <!-- Text Slider -->
+             <div class="text-slider">
+
+             </div>
+          </div>
+     </main>
 </body>
 </html>
