--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Figma To Web</title>
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header -->  
      <header>
         <!-- notification -->
          <div class="notification">
@@ -55,15 +55,15 @@
                     <a href="#!" class="our-stores">Our Stores</a>
                  </div>
                 <!-- English -->
-                <div class="english">
-                    <a href="#!" class="our-stores">English</a>
-                    <img src="./assets/img/.svg" alt="">
-                </div>
+                 <div class="english">
+                   <a href="#!">English</a>
+                   <img src="./assets/img/.svg" alt="">
+                 </div>
                 <!-- United States -->
                 <div class="united-states">
-                    <a href="#!" class="our-stores">United States (USD $)</a>
-                    <img src="./assets/img/.svg" alt="">
-                </div>
+                  <a href="#!">United States (USD $)</a>
+                  <img src="./assets/img/.svg" alt="">
+               </div>
             </div>
          </div>
         <!-- Background -->
@@ -86,7 +86,7 @@
                  </div>
                 <!-- Products -->
                  <div class="products">
-                    <a href="#!">products</a>
+                    <a href="#!">Products</a>
                     <img src="./assets/img/.svg" alt="">
                  </div>
                 <!-- Pages -->
@@ -124,13 +124,16 @@
           <div class="slider">
             <!-- Img Slider -->
              <div class="img-slider">
-               <img src="./assets/img/img1.jpg" alt="img1.jpg">
-               <img src="./assets/img/img2.jpg" alt="img2.jpg">
-               <img src="./assets/img/img3.jpg" alt="img3.jpg">
+               <img src="./assets/img/img1.jpg" alt="img1">
+               <img src="./assets/img/img2.jpg" alt="img2">
+               <img src="./assets/img/img3.jpg" alt="img3">
              </div>
             <!-- Text Slider -->
              <div class="text-slider">
-
+               <h1>Stylish</h1>
+               <h1>Top Trending</h1>
+               <p>So soft you don't want to take it off.</p>
+               <a href="#!" class="bnt-en">Explore Now</a>
              </div>
           </div>
      </main>
