--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- styles -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Js -->
-    <script src="./index.js" defer></script>
     <title>Figma To Web</title>
 </head>
 <body>
@@ -49,65 +47,59 @@
                 <a href="#!">Sign Up</a>
              </div>
             <!-- Language -->
-            <div class="language">
-                <!-- Our Stores -->
-                 <div class="our-strores">
-                    <a href="#!" class="our-stores">Our Stores</a>
-                 </div>
-                <!-- English -->
-                 <div class="english">
-                   <a href="#!">English</a>
-                   <img src="./assets/img/.svg" alt="">
-                 </div>
-                <!-- United States -->
-                <div class="united-states">
-                  <a href="#!">United States (USD $)</a>
-                  <img src="./assets/img/.svg" alt="">
-               </div>
-            </div>
+            <nav>
+               <ul>
+                  <li>
+                     <a href="#!">Our Stores</a>
+                  </li>
+                  <li>
+                     <a href="#!">English</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+                  <li>
+                     <a href="#!">United States (USD $)</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+               </ul>
+            </nav>
          </div>
         <!-- Background -->
          <div class="background">
             <!-- Logo -->
              <div class="logo">
-                <img src="./assets/img/Logo.svg" alt="">
+                <img src="./assets/img/Logo.svg" alt="Logo">
              </div>
             <!-- Menu -->
-             <nav class="menu">
-                <!-- Home -->
-                 <div class="home">
-                    <a href="#!">Home</a>
-                    <img src="./assets/img/.svg" alt="">
-                 </div>
-                <!-- Shop -->
-                 <div class="shop">
-                    <a href="#!">Shop</a>
-                    <img src="./assets/img/.svg" alt="">
-                 </div>
-                <!-- Products -->
-                 <div class="products">
-                    <a href="#!">Products</a>
-                    <img src="./assets/img/.svg" alt="">
-                 </div>
-                <!-- Pages -->
-                 <div class="pages">
-                    <a href="#!">Pages</a>
-                    <img src="./assets/img/.svg" alt="">
-                 </div>
-                <!-- Blog -->
-                 <div class="blog">
-                    <a href="#!">Blog</a>
-                    <img src="./assets/img/.svg" alt="">
-                 </div>
-                <!-- Sale -->
-                 <div class="sale">
-                    <a href="#!">Sale</a>
-                 </div>
-                <!-- Buy Umino -->
-                 <div class="buy-umino">
-                    <a href="#!">Buy Umino!</a>
-                 </div>
-               </nav>
+             <nav>
+               <ul>
+                  <li>
+                     <a href="#!">Home</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+                  <li>
+                     <a href="#!">Shop</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+                  <li>
+                     <a href="#!">Products</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+                  <li>
+                     <a href="#!">Pages</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+                  <li>
+                     <a href="#!">Blog</a>
+                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                  </li>
+                  <li>
+                     <a href="#!">Sale</a>
+                  </li>
+                  <li>
+                     <a href="#!">Buy Umino!</a>
+                  </li>
+               </ul>
+             </nav>
             <!-- Icon -->
              <div class="icon">
                 <img src="./assets/img/Search.svg" alt="Search">
@@ -122,19 +114,22 @@
      <main>
          <!-- Slider -->
           <div class="slider">
-            <!-- Img Slider -->
-             <div class="img-slider">
-               <img src="./assets/img/img1.jpg" alt="img1">
-               <img src="./assets/img/img2.jpg" alt="img2">
-               <img src="./assets/img/img3.jpg" alt="img3">
+            <!-- Img -->
+             <div class="img">
+               <img src="./assets/img/img1.jpg" alt="img1" width="1920px" height="650px">
              </div>
-            <!-- Text Slider -->
-             <div class="text-slider">
+            <!-- Text -->
+             <div class="text">
                <h1>Stylish</h1>
                <h1>Top Trending</h1>
                <p>So soft you don't want to take it off.</p>
                <a href="#!" class="bnt-en">Explore Now</a>
              </div>
+            <!-- Hover Button -->
+             <div class="hover-button">
+                  <a href="#!" class="btn-l">❮</a>
+                  <a href="#!" class="btn-r">❯</a>
+               </div>
           </div>
      </main>
 </body>
