--- a/index.html
+++ b/index.html
@@ -127,9 +127,49 @@
              </div>
             <!-- Hover Button -->
              <div class="hover-button">
-                  <a href="#!" class="btn-l">❮</a>
-                  <a href="#!" class="btn-r">❯</a>
-               </div>
+               <a href="#!" class="btn-l">❮</a>
+               <a href="#!" class="btn-r">❯</a>
+             </div>
+            <!-- Dots -->
+             <div class="dot">
+               <button onclick="curentSlide(1)"></button>
+               <button onclick="curentSlide(2)"></button>
+               <button onclick="curentSlide(3)"></button>
+             </div>
+          </div>
+         <!-- Feature Categories -->
+          <div class="feature">
+            <!-- Title -->
+             <div class="title">
+                <h1>Featured Collections</h1>
+                <p>Elevate your style with our chic featured collection—where fashion meets flair effortlessly.</p>
+             </div>
+            <!-- Categories -->
+             <div class="categories">
+               <!-- Clothing -->
+                <div class="clothing">
+                  <img src="./assets/img/Clothing.svg" alt="Clothing">
+                  <a href="#!" class="btn" >Clothing</a>
+                </div>
+               <!-- B -->
+                <div class="b">
+                  <!-- Sunglasses -->
+                   <div class="sunglasses">
+                     <img src="./assets/img/Sunglasses.svg" alt="Clothing" width="450px" height="350px">
+                     <a href="#!" class="btn">Sunglasses</a>
+                   </div>
+                  <!-- Bags -->
+                   <div class="bags">
+                     <img src="./assets/img/Bags.svg" alt="Bags" width="450px" height="350px">
+                     <a href="#!" class="btn">Bags</a>
+                   </div>
+                </div>
+               <!-- Sneaker -->
+                <div class="sneaker">
+                  <img src="./assets/img/Sneaker.svg" alt="Sneaker" width="450px" height="730px">
+                  <a href="#!" class="btn">Sneaker</a>
+                </div>
+             </div>
           </div>
      </main>
 </body>
