--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      <img src="./assets/img/.svg" alt="." width="12px" height="10px">
                   </li>
                   <li>
-                     <a href="#!">United States (USD $)</a>
+                     <a href="#!">United States (USD-$)</a>
                      <img src="./assets/img/.svg" alt="." width="12px" height="10px">
                   </li>
                </ul>
@@ -148,7 +148,7 @@
              <div class="categories">
                <!-- Clothing -->
                 <div class="clothing">
-                  <img src="./assets/img/Clothing.svg" alt="Clothing">
+                  <img src="./assets/img/Clothing.svg" alt="Clothing" width="450px" height="730px">
                   <a href="#!" class="btn" >Clothing</a>
                 </div>
                <!-- B -->
@@ -171,6 +171,7 @@
                 </div>
              </div>
           </div>
+         
      </main>
 </body>
 </html>
