--- a/index.html
+++ b/index.html
@@ -171,7 +171,72 @@
                 </div>
              </div>
           </div>
-         
+         <!-- Trending this week -->
+          <div class="trending">
+            <!-- Title -->
+             <div class="title">
+               <h1>Trending this Week</h1>
+             </div>
+            <!-- Text -->
+             <nav>
+               <ul>
+                  <li>
+                     <a href="#!">TOPS</a>
+                  </li>
+                  <li>
+                     <a href="#!">DRESSES</a>
+                  </li>
+                  <li>
+                     <a href="#!">T-SHIRT</a>
+                  </li>
+                  <li>
+                     <a href="#!">BAGS</a>
+                  </li>
+                  <li>
+                     <a href="#!">SHOES</a>
+                  </li>
+               </ul>
+             </nav>
+            <!-- Products -->
+             <div class="products">
+               <div class="pro1">
+                  <img src="./assets/img/trending/pro1.svg" alt="pro1" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/trending/rate1.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/trending/color.svg" alt="color">
+                  </div>
+               </div>
+               <div class="pro2">
+                  <img src="./assets/img/trending/pro2.svg" alt="pro2" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/trending/rate2.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/trending/color.svg" alt="color">
+                  </div>
+               </div>
+               <div class="pro3">
+                  <img src="./assets/img/trending/pro3.svg" alt="pro3" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/trending/rate1.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/trending/color.svg" alt="color">
+                  </div>
+               </div>
+               <div class="pro4">
+                  <img src="./assets/img/trending/pro4.svg" alt="pro4" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/trending/rate2.svg" alt="rate">
+                     <p>$145.00 - $169.00</p>
+                     <img src="./assets/img/trending/color.svg" alt="color">
+                  </div>
+               </div>
+             </div>
+          </div>
      </main>
 </body>
 </html>
