--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="slider">
             <!-- Img -->
              <div class="img">
-               <img src="./assets/img/img1.jpg" alt="img1" width="1920px" height="650px">
+               <img src="./assets/img/main/slider/img1.jpg" alt="img1" width="1920px" height="650px">
              </div>
             <!-- Text -->
              <div class="text">
@@ -148,25 +148,25 @@
              <div class="categories">
                <!-- Clothing -->
                 <div class="clothing">
-                  <img src="./assets/img/Clothing.svg" alt="Clothing" width="450px" height="730px">
+                  <img src="./assets/img/main/feature/Clothing.svg" alt="Clothing" width="450px" height="730px">
                   <a href="#!" class="btn" >Clothing</a>
                 </div>
                <!-- B -->
                 <div class="b">
                   <!-- Sunglasses -->
                    <div class="sunglasses">
-                     <img src="./assets/img/Sunglasses.svg" alt="Clothing" width="450px" height="350px">
+                     <img src="./assets/img/main/feature/Sunglasses.svg" alt="Clothing" width="450px" height="350px">
                      <a href="#!" class="btn">Sunglasses</a>
                    </div>
                   <!-- Bags -->
                    <div class="bags">
-                     <img src="./assets/img/Bags.svg" alt="Bags" width="450px" height="350px">
+                     <img src="./assets/img/main/feature/Bags.svg" alt="Bags" width="450px" height="350px">
                      <a href="#!" class="btn">Bags</a>
                    </div>
                 </div>
                <!-- Sneaker -->
                 <div class="sneaker">
-                  <img src="./assets/img/Sneaker.svg" alt="Sneaker" width="450px" height="730px">
+                  <img src="./assets/img/main/feature/Sneaker.svg" alt="Sneaker" width="450px" height="730px">
                   <a href="#!" class="btn">Sneaker</a>
                 </div>
              </div>
@@ -199,40 +199,125 @@
              </nav>
             <!-- Products -->
              <div class="products">
+               <!-- 1 -->
                <div class="pro1">
-                  <img src="./assets/img/trending/pro1.svg" alt="pro1" width="330px" height="440px">
+                  <img src="./assets/img/main/trending/pro1.svg" alt="pro1" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/trending/rate1.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate1.svg" alt="rate">
                      <p>$150.00</p>
-                     <img src="./assets/img/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color">
                   </div>
                </div>
+               <!-- 2 -->
                <div class="pro2">
-                  <img src="./assets/img/trending/pro2.svg" alt="pro2" width="330px" height="440px">
+                  <img src="./assets/img/main/trending/pro2.svg" alt="pro2" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/trending/rate2.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate2.svg" alt="rate">
                      <p>$150.00</p>
-                     <img src="./assets/img/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color">
                   </div>
                </div>
+               <!-- 3 -->
                <div class="pro3">
-                  <img src="./assets/img/trending/pro3.svg" alt="pro3" width="330px" height="440px">
+                  <img src="./assets/img/main/trending/pro3.svg" alt="pro3" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/trending/rate1.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate1.svg" alt="rate">
                      <p>$150.00</p>
-                     <img src="./assets/img/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color">
                   </div>
                </div>
+               <!-- 4 -->
                <div class="pro4">
-                  <img src="./assets/img/trending/pro4.svg" alt="pro4" width="330px" height="440px">
+                  <img src="./assets/img/main/trending/pro4.svg" alt="pro4" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/trending/rate2.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate2.svg" alt="rate">
                      <p>$145.00 - $169.00</p>
-                     <img src="./assets/img/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color">
+                  </div>
+               </div>
+             </div>
+          </div>
+         <!-- Banner -->
+          <div class="banner">
+            <!-- Banner1 -->
+             <div class="bn1">
+               <img src="./assets/img/main/banner/banner1.svg" alt="bn1" width="500px" height="700px">
+               <div class="text">
+                  <p>ONLINE EXCLUSIVE</p>
+                  <h1>Oversized Shirt</h1>
+                  <a href="#!">Shop the Look</a>
+               </div>
+             </div>
+            <!-- Banner2 -->
+             <div class="bn2">
+               <img src="./assets/img/main/banner/banner2.svg" alt="bn2" width="500px" height="700px">
+               <div class="text">
+                  <p>ONLINE EXCLUSIVE</p>
+                  <h1>Oversized Shirt</h1>
+                  <a href="#!">Shop the Look</a>
+               </div>
+             </div>
+            <!-- Banner3 -->
+             <div class="bn3">
+               <img src="./assets/img/main/banner/banner3.svg" alt="bn3" width="500px" height="700px">
+               <div class="text">
+                  <p>ONLINE EXCLUSIVE</p>
+                  <h1>Oversized Shirt</h1>
+                  <a href="#!">Shop the Look</a>
+               </div>
+             </div>
+          </div>
+         <!-- New arrivals -->
+          <div class="arrivals">
+            <!-- Title -->
+             <div class="title">
+               <h1>New Arrivals</h1>
+               <p>Here’s some of our new arrivals products people are in love with.</p>
+             </div>
+             <!-- Products -->
+             <div class="products">
+               <!-- 1 -->
+               <div class="pro1">
+                  <img src="./assets/img/main/arrivals/pro1.svg" alt="pro1" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/main/arrivals/rate1.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/main/arrivals/color1.svg" alt="color">
+                  </div>
+               </div>
+               <!-- 2 -->
+               <div class="pro2">
+                  <img src="./assets/img/main/arrivals/pro2.svg" alt="pro2" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/main/arrivals/rate2.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/main/arrivals/color2.svg" alt="color">
+                  </div>
+               </div>
+               <!-- 3 -->
+               <div class="pro3">
+                  <img src="./assets/img/main/arrivals/pro3.svg" alt="pro3" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/main/arrivals/rate1.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/main/arrivals/color3.svg" alt="color">
+                  </div>
+               </div>
+               <!-- 4 -->
+               <div class="pro4">
+                  <img src="./assets/img/main/arrivals/pro4.svg" alt="pro4" width="330px" height="440px">
+                  <div class="text">
+                     <h1>Square Textured Striped</h1>
+                     <img src="./assets/img/main/arrivals/rate2.svg" alt="rate">
+                     <p>$150.00</p>
+                     <img src="./assets/img/main/arrivals/color3.svg" alt="color">
                   </div>
                </div>
              </div>
