--- a/index.html
+++ b/index.html
@@ -322,6 +322,38 @@
                </div>
              </div>
           </div>
+         <!-- People like -->
+          <div class="people">
+            <!-- Title -->
+             <div class="title">
+               <h1>Customer Say!</h1>
+               <p>Customers love our products and we always strive to please them all.</p>
+             </div>
+            <!-- Text -->
+             <div class="text">
+               <!-- 1 -->
+                <div>
+                  <img src="./assets/img/main/people/img1.svg" alt="people1">
+                  <p>A perfect product, it keeps you very warm without over heating. True to size, I couldn't be happier with the purchase... Thank you! 🤗</p>
+                  <img src="./assets/img/main/people/rate.svg" alt="rate">
+                  <p>Algistino Lionel - Verified Buyer</p>
+                </div>
+               <!-- 2 -->
+                <div class="txt">
+                  <img src="./assets/img/main/people/img2.svg" alt="people2">
+                  <p>Great to be able to order everything I needed from the comfort of my home and the delivery was extremely quick. Recommend... 🥰</p>
+                  <img src="./assets/img/main/people/rate.svg" alt="rate">
+                  <p>Algistino Lionel - Verified Buyer</p>
+                </div>
+               <!-- 3 -->
+                <div>
+                  <img src="./assets/img/main/people/img3.svg" alt="people">
+                  <p>These are sooo pretty and very comfy. Perfect color as well. I love wearing these with a neutral top and Chelsea boots. Wicked cute...😍 </p>
+                  <img src="./assets/img/main/people/rate.svg" alt="rate">
+                  <p>Algistino Lionel - Verified Buyer</p>
+                </div>
+             </div>
+          </div>
      </main>
 </body>
 </html>
