--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
              </div>
          </div>
      </header>
-    <!-- Main-->
+    <!-- Main -->
      <main>
          <!-- Slider -->
           <div class="slider">
@@ -331,29 +331,94 @@
              </div>
             <!-- Text -->
              <div class="text">
+               <!-- About Text -->
+                <div class="at">
+                  <!-- 1 -->
+                  <div>
+                     <img src="./assets/img/main/people/img1.svg" alt="people1">
+                     <p>A perfect product, it keeps you very warm without over heating. True to size, I couldn't be happier with the purchase... Thank you! 🤗</p>
+                     <img src="./assets/img/main/people/rate.svg" alt="rate">
+                     <p>Algistino Lionel - Verified Buyer</p>
+                  </div>
+                  <!-- 2 -->
+                  <div class="txt">
+                     <img src="./assets/img/main/people/img2.svg" alt="people2">
+                     <p>Great to be able to order everything I needed from the comfort of my home and the delivery was extremely quick. Recommend... 🥰</p>
+                     <img src="./assets/img/main/people/rate.svg" alt="rate">
+                     <p>Algistino Lionel - Verified Buyer</p>
+                  </div>
+                  <!-- 3 -->
+                  <div>
+                     <img src="./assets/img/main/people/img3.svg" alt="people">
+                     <p>These are sooo pretty and very comfy. Perfect color as well. I love wearing these with a neutral top and Chelsea boots. Wicked cute...😍 </p>
+                     <img src="./assets/img/main/people/rate.svg" alt="rate">
+                     <p>Algistino Lionel - Verified Buyer</p>
+                  </div>
+                </div>
+               <!-- Hover -->
+                <div class="hover">
+                  <a href="#!" class="btn-l">❮</a>
+                  <a href="#!" class="btn-r">❯</a>
+                </div>
+             </div>
+          </div>
+         <!-- Instagram -->
+          <div class="ig">
+            <!-- Title -->
+             <div class="title">
+               <h1>Shop by Gram</h1>
+               <p>Inspire and let yourself be inspired, from one unique fashion to another.</p>
+             </div>
+            <!-- List Img -->
+             <div class="img">
                <!-- 1 -->
-                <div>
-                  <img src="./assets/img/main/people/img1.svg" alt="people1">
-                  <p>A perfect product, it keeps you very warm without over heating. True to size, I couldn't be happier with the purchase... Thank you! 🤗</p>
-                  <img src="./assets/img/main/people/rate.svg" alt="rate">
-                  <p>Algistino Lionel - Verified Buyer</p>
+                <div class="i1">
+                  <img src="./assets/img/main/ig/img1.svg" alt="img1" width="230px" height="230px">
+                  <div class="icon">
+                     <img src="./assets/img/main/ig/icon.svg" alt="icon">
+                  </div>
                 </div>
                <!-- 2 -->
-                <div class="txt">
-                  <img src="./assets/img/main/people/img2.svg" alt="people2">
-                  <p>Great to be able to order everything I needed from the comfort of my home and the delivery was extremely quick. Recommend... 🥰</p>
-                  <img src="./assets/img/main/people/rate.svg" alt="rate">
-                  <p>Algistino Lionel - Verified Buyer</p>
+                <div class="i1">
+                  <img src="./assets/img/main/ig/img2.svg" alt="img2" width="230px" height="230px">
+                  <div class="icon">
+                     <img src="./assets/img/main/ig/icon.svg" alt="icon">
+                  </div>
                 </div>
                <!-- 3 -->
-                <div>
-                  <img src="./assets/img/main/people/img3.svg" alt="people">
-                  <p>These are sooo pretty and very comfy. Perfect color as well. I love wearing these with a neutral top and Chelsea boots. Wicked cute...😍 </p>
-                  <img src="./assets/img/main/people/rate.svg" alt="rate">
-                  <p>Algistino Lionel - Verified Buyer</p>
+                <div class="i1">
+                  <img src="./assets/img/main/ig/img3.svg" alt="img3" width="230px" height="230px">
+                  <div class="icon">
+                     <img src="./assets/img/main/ig/icon.svg" alt="icon">
+                  </div>
+                </div>
+               <!-- 4 -->
+                <div class="i1">
+                  <img src="./assets/img/main/ig/img4.svg" alt="img4" width="230px" height="230px">
+                  <div class="icon">
+                     <img src="./assets/img/main/ig/icon.svg" alt="icon">
+                  </div>
+                </div>
+               <!-- 5 -->
+                <div class="i1">
+                  <img src="./assets/img/main/ig/img5.svg" alt="img5" width="230px" height="230px">
+                  <div class="icon">
+                     <img src="./assets/img/main/ig/icon.svg" alt="icon">
+                  </div>
+                </div>
+               <!-- 6 -->
+                <div class="i1">
+                  <img src="./assets/img/main/ig/img6.svg" alt="img6" width="230px" height="230px">
+                  <div class="icon">
+                     <img src="./assets/img/main/ig/icon.svg" alt="icon">
+                  </div>
                 </div>
              </div>
           </div>
      </main>
+    <!-- Footer -->
+     <footer>
+      
+     </footer>
 </body>
 </html>
